Bug 1645714 - Don't assert aPrevFrame's position in its continuation chain when inserting a frame into flex container.

See an analysis in bug 1645714 comment 2.

Differential Revision: https://phabricator.services.mozilla.com/D82136